# DRIFT

./: .gitignore  DRIFT-implementation-spec.md  README.ja.md  README.ko.md  README.md  README.zh.md  config.yaml  m4_results.json  pyproject.toml
.claude/skills/drift-env-introspect/: SKILL.md
.claude/skills/drift-parity-debugger/: SKILL.md
.claude/skills/drift-protocol-tester/: SKILL.md
.claude/workflows/: drift-docs-review.js
docs/: 01-implementation-plan.md  02-workflow-plan.md  03-goal-execution-plan.md  04-skills-mcp-plan.md  05-parity-debugging-playbook.md  06-m0-setup-runbook.md  07-review-log.md  08-benchmark-plan.md  README.md  benchmarks.md  manual.ja.md  manual.ko.md  manual.md  manual.zh.md  openai-compatibility-audit.md  openai-compatibility.md  openai-endpoint-roadmap.md
drift/: __init__.py  bench.py  bench_m4.py  cli.py  common.py  crypto.py  discovery.py  doctor.py  engine_base.py  engine_torch.py  itest.py  ledger.py  loader.py  membership.py  node.py  openai_api.py  orchestrator.py  parity_test.py  protocol.py  receipts.py  reference.py  run.py  shard_server.py  tunnel.py  verify.py
scripts/: colab_node.ipynb  colab_node.py  install.ps1  install.sh  make_diagrams.py  openai_compat_smoke.py  render_diagrams.sh
tests/: test_openai_api.py  test_openai_compat_payloads.py  test_openai_js_sdk_smoke.py  test_openai_sdk_smoke.py  test_sampling_controls.py
