[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drift"
version = "0.10.0"
description = "Decentralized Routed Inference For Tokens — one model, split across your machines, no datacenter."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Taewoo Park" }]
keywords = ["llm", "inference", "pipeline-parallel", "distributed", "mps", "cuda"]
dependencies = [
  "torch",
  "transformers>=5.5",
  "safetensors",
  "msgpack",
  "numpy",
  "huggingface_hub",
  "accelerate",
  "pyyaml",
  "zeroconf>=0.131",
]

[project.scripts]
drift = "drift.cli:main"

[project.urls]
Homepage = "https://github.com/TaewoooPark/DRIFT"

[tool.hatch.build.targets.wheel]
packages = ["drift"]
